--- a/style.css
+++ b/style.css
@@ -32,3 +32,12 @@
     width: auto;
     height: 100%;
 }
+
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+    display: none !important;
+}
