post gather update1

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     left: -.5em;
     width: .2em;
     vertical-align: -.25em;
-    text-shadow: -1px -1px 0px white, -1px 1px 0px white, -1px 0px 0px white; // optional contrast
+    text-shadow: -1px -1px 0px white, -1px 1px 0px white, -1px 0px 0px white;
 }
 
 
@@ -28,9 +28,19 @@
     color: #991920;
 }
 
-.responsive {
+.left {
+    float: left;
+    width: 60%;
+}
+
+.right {
+    float: "right";
     width: auto;
-    height: 100%;
+    height: 100%
+}
+
+.clearfix{
+    clear:both
 }
 
 [ng\:cloak],
